@@ -26,6 +26,9 @@ Changes from 0.12.1
    * `(** a b c d)` is now equivalent to `(** a (** b (** c d)))`,
      not `(** (** (** a b) c) d)`
    * `setv` always returns None
+   * When a `try` form executes an `else` clause, the return value for the
+     `try` form is taken from `else` instead of the `try` body. For example,
+     `(try 1 (except [ValueError] 2) (else 3))` returns `3`.
    * xor: If exactly one argument is true, return it
    * hy.core.reserved is now hy.extra.reserved
 
